--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-959.8KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇩🇪 德国-1.23MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-451.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-341.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇯🇵 日本-380.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-702.2KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-938.8KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-328.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-860.5KB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇫🇷 法国-909.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-1.70MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-453.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-729.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-500.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.18MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇩🇪 德国-1.71MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-453.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-500.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-453.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-500.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-453.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-500.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-453.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-500.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-453.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-500.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-453.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-500.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-959.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-702.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-938.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-909.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-453.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-500.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.18MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
