--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-838.3KB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-523.7KB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇦 加拿大-729.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-250.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-577.5KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-585.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-380.9KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-820.9KB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇸🇬 新加坡-2.14MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-649.1KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-716.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-837.7KB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇦🇺 澳大利亚-317.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-838.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-577.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-585.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-649.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-716.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-837.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-317.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-838.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-577.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-585.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-649.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-716.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-837.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-317.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-838.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-577.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-585.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-649.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-716.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-837.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-317.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-838.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-577.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-585.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-649.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-716.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-837.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-317.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-838.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-577.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-585.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-649.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-716.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-837.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-317.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-838.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-577.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-585.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-649.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-716.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-837.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-317.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-838.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-523.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-250.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-577.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-585.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-820.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-649.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-716.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-837.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-317.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
